Cabal-version:       2.2

Name:                codeworld-available-pkgs
Version:             0.1.0.0
License:             Apache-2.0
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Chris Smith <cdsmith@gmail.com>
Copyright:           (c) 2020, The CodeWorld Authors
Bug-reports:         https://github.com/google/codeworld/issues

Library
  Build-depends:
    Boolean,
    Decimal,
    Earley,
    HUnit,
    ListLike,
    MemoTrie,
    MonadRandom,
    NumInstances,
    Only,
    QuickCheck,
    SHA,
    StateVar,
    Yampa,
    active,
    ad,
    adjunctions,
    -- accelerate, (does not build with GHCJS)
    aeson,
    algebraic-graphs,
    apportionment,
    array,
    assoc,
    async,
    attoparsec,
    attoparsec-iso8601,
    auto,
    -- axiom, (depends on transient, which fails to build)
    backprop,
    base,
    base-compat-batteries,
    base-orphans,
    base64-bytestring,
    basement,
    bifunctors,
    bimap,
    binary,
    binary-orphans,
    blaze-builder,
    blaze-html,
    blaze-markup,
    -- board-games, (depends on network)
    bool8,
    bytes,
    bytestring,
    bytestring-builder,
    call-stack,
    capability,
    case-insensitive,
    cereal,
    cereal-text,
    charset,
    checksum,
    circle-packing,
    clock,
    colour,
    combinatorial,
    comonad,
    comonad-transformers,
    concur-core,
    concurrency,
    concurrent-output,
    conduit,
    constraints,
    constraints-extras,
    containers,
    contravariant,
    cookie,
    cryptonite,
    cubicbezier,
    data-accessor,
    data-accessor-transformers,
    data-default,
    data-default-class,
    data-default-instances-containers,
    data-default-instances-dlist,
    data-default-instances-old-locale,
    data-reify,
    dec,
    deepseq,
    dejafu,
    dense-linear-algebra,
    dependent-map,
    dependent-sum,
    diagrams,
    diagrams-contrib,
    diagrams-core,
    diagrams-lib,
    diagrams-solve,
    diagrams-svg,
    digestive-functors,
    distributive,
    dlist,
    dsp,
    dual-tree,
    dunai,
    either,
    enclosed-exceptions,
    enummapset,
    erf,
    event-list,
    exception-transformers,
    exceptions,
    explicit-exception,
    extensible-effects,
    extra,
    fail,
    fast-math,
    fclabels,
    fgl,
    fingertree,
    finite-typelits,
    first-class-families,
    fixed-length,
    fixed-list,
    flow,
    foldl,
    fmlist,
    force-layout,
    -- formattable, (time dependency is too old)
    -- foundation, (doesn't build for unclear reasons related to ghc-prim)
    free,
    fused-effects,
    generic-deriving,
    generic-lens,
    generics-sop,
    ghc-prim,
    ghcjs-base,
    ghcjs-dom,
    ghcjs-perch,
    ghcjs-prim,
    gray-code,
    groups,
    half,
    -- hamilton, (depends on hmatrix, which uses native libs)
    hashable,
    hashtables,
    haskell-lexer,
    haskell-src-exts,
    haskell-src-meta,
    hedgehog,
    hgeometry >= 0.12,
    hspec,
    hspec-core,
    hspec-expectations,
    html,
    http-api-data,
    http-media,
    http-types,
    ieee754,
    indexed-list-literals,
    indexed-profunctors,
    integer-gmp,
    integer-logarithms,
    integration,
    interpolation,
    intervals,
    invariant,
    jsaddle,
    kan-extensions,
    keycode,
    latex,
    leancheck,
    lens,
    lifted-async,
    lifted-base,
    linear,
    log-domain,
    logict,
    loop,
    markov-chain,
    massiv,
    math-functions,
    matrix,
    megaparsec,
    memory,
    mersenne-random-pure64,
    mfsolve,
    microlens,
    microlens-mtl,
    miso,
    mmorph,
    monad-bayes,
    monad-control,
    -- monad-coroutine 0.9.1 broken for old base
    monad-coroutine < 0.9.1,
    monad-loops,
    monad-parallel,
    monad-unlift,
    mono-traversable,
    monoid-extras,
    monoid-transformer,
    monoidal-containers,
    moo,
    mtl,
    mtl-compat,
    mutable-containers,
    mwc-probability,
    mwc-random,
    nats,
    natural-transformation,
    netwire,
    network-uri,
    newtype-generics,
    non-negative,
    numeric-prelude,
    old-locale,
    optics,
    optics-core,
    optics-extra,
    optparse-applicative,
    parallel,
    parsec,
    parser-combinators,
    parsers,
    patch,
    pipes,
    polysemy,
    pqueue,
    prelude-compat,
    pretty,
    pretty-simple,
    pretty-show,
    prettyprinter,
    prim-uniq,
    primitive,
    probability,
    profunctors,
    protolude,
    psqueues,
    quickcheck-io,
    random,
    random-shuffle,
    reactive-banana,
    -- reanimate, (depends on chiphunk, which depends on native library)
    reducers,
    ref-tf,
    reflection,
    reflex,
    reflex-dom,
    reflex-dom-core,
    regex-base,
    regex-compat-tdfa,
    regex-tdfa >= 1.3.1.0,
    relude,
    resourcet,
    rio,
    safe,
    safe-exceptions,
    scheduler,
    scientific,
    semialign,
    semigroupoids,
    semigroups,
    servant,
    set-cover,
    singleton-bool,
    -- singletons, (build error related to Int/Integer/Uniq)
    smallcheck,
    sop-core,
    split,
    splitmix,
    statistics,
    stm,
    storable-complex,
    storable-record,
    streaming,
    string-conversions,
    svg-builder,
    syb,
    tagged,
    tasty,
    tasty-expected-failure,
    tasty-hedgehog,
    tasty-hunit,
    template-haskell,
    text,
    tf-random,
    tfp,
    these,
    time,
    time-compat,
    transformers,
    transformers-base,
    transformers-compat,
    -- transient, (build fails: missing Semigroup instance for TransIO)
    trifecta,
    type-equality,
    typelits-witnesses,
    unagi-chan,
    unbounded-delays,
    unexceptionalio,
    unicode,
    unique,
    unliftio,
    unliftio-core,
    unordered-containers,
    utf8-string,
    utility-ht,
    uuid-types,
    vault,
    vector,
    vector-algorithms,
    vector-binary-instances,
    vector-builder,
    vector-space,
    vinyl,
    void,
    witherable,
    wl-pprint-annotated,
    zenc

  Default-language:    Haskell2010

Executable find-dup-modules
  Hs-source-dirs:      src
  Main-is:             Main.hs
  Build-depends:       base,
                       bytestring,
                       containers,
                       ghc-boot

  Default-language:    Haskell2010
