Name:                codeworld-base
Version:             0.1.0.0
Synopsis:            Replacement base module for CodeWorld
License-file:        LICENSE
Author:              Chris Smith
Maintainer:          cdsmith@gmail.com
Copyright:           (c) 2014, Google, Inc.
Build-type:          Simple
Cabal-version:       >=1.8

Description:
  This module replaces base when building CodeWorld apps. It simplifies the Haskell
  Prelude to remove the use of numeric type classes and unify some types.

Flag ghcjs
    Description: Tell cabal we are using ghcjs (work around until hackage supports impl(ghcjs))
    Default: True

Library
  Exposed-modules:     Prelude,
                       HaskellPrelude,
                       Control.Applicative,
                       Control.Arrow,
                       Control.Category,
                       Control.Concurrent,
                       Control.Concurrent.Chan,
                       Control.Concurrent.MVar,
                       Control.Concurrent.QSem,
                       Control.Concurrent.QSemN,
                       Control.Exception,
                       Control.Exception.Base,
                       Control.Monad,
                       Control.Monad.Fix,
                       Control.Monad.ST,
                       Control.Monad.ST.Lazy,
                       Control.Monad.ST.Lazy.Safe,
                       Control.Monad.ST.Lazy.Unsafe,
                       Control.Monad.ST.Safe,
                       Control.Monad.ST.Strict,
                       Control.Monad.ST.Unsafe,
                       Control.Monad.Zip,
                       Data.Bits,
                       Data.Bool,
                       Data.Char,
                       Data.Coerce,
                       Data.Complex,
                       Data.Data,
                       Data.Dynamic,
                       Data.Either,
                       Data.Eq,
                       Data.Fixed,
                       Data.Foldable,
                       Data.Function,
                       Data.Functor,
                       Data.Int,
                       Data.IORef,
                       Data.Ix,
                       Data.List,
                       Data.Maybe,
                       Data.Monoid,
                       Data.Ord,
                       Data.Proxy,
                       Data.Ratio,
                       Data.STRef,
                       Data.STRef.Lazy,
                       Data.STRef.Strict,
                       Data.String,
                       Data.Traversable,
                       Data.Tuple,
                       Data.Type.Bool,
                       Data.Type.Coercion,
                       Data.Type.Equality,
                       Data.Typeable,
                       Data.Typeable.Internal,
                       Data.Unique,
                       Data.Version,
                       Data.Word,
                       System.CPUTime,
                       System.Info,
                       System.IO,
                       System.IO.Error,
                       System.IO.Unsafe,
                       System.Mem,
                       System.Mem.StableName,
                       System.Mem.Weak,
                       System.Timeout,
                       Text.ParserCombinators.ReadP,
                       Text.ParserCombinators.ReadPrec,
                       Text.Printf,
                       Text.Read,
                       Text.Read.Lex,
                       Text.Show,
                       Text.Show.Functions,
                       Unsafe.Coerce
  Other-modules:       Internal.Num,
                       Internal.Prelude,
                       Internal.Text,
                       Internal.Color,
                       Internal.Picture,
                       Internal.Event,
                       Internal.CodeWorld,
                       Internal.DeepEq
  Build-depends:       base,
                       mtl,
                       random,
                       text,
                       time
  Exposed:             False
  Ghc-options:         -O2

  if flag(ghcjs)
    Build-depends:     ghcjs-base,
                       ghcjs-dom,
                       ghcjs-canvas
