
Name:                codeworld-compiler
Version:             0.1.0.0
Synopsis:            GHCJS based standalone compiler for CodeWorld
License:             Apache-2.0
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Chris Smith <cdsmith@gmail.com>
Copyright:           (c) 2018, The CodeWorld Authors
Build-type:          Simple
Cabal-version:       >=1.10

Description:
  The GHCJS based standalone compiler for CodeWorld programming environment.

Executable codeworld-compiler
  Hs-source-dirs: exec
  Main-is: Main.hs

  Build-depends:
    base,
    codeworld-compiler,
    directory,
    filepath,
    optparse-applicative,
    temporary,
    text

Library
  Exposed-modules:
    CodeWorld.Compile,
    CodeWorld.Compile.Base

  Other-modules:
    CodeWorld.Compile.Diagnostics
    CodeWorld.Compile.ParseCode
    CodeWorld.Compile.Requirements
    CodeWorld.Compile.Requirements.Eval
    CodeWorld.Compile.Requirements.Language
    CodeWorld.Compile.Requirements.Types

  Build-depends:
    aeson,
    array,
    base,
    base64-bytestring,
    bytestring,
    codeworld-error-sanitizer,
    cryptonite,
    data-default,
    directory,
    filepath,
    hashable,
    haskell-src-exts,
    megaparsec,
    memory,
    mtl,
    process,
    regex-tdfa,
    regex-tdfa-text,
    split,
    syb,
    temporary,
    text,
    zlib

  Hs-source-dirs: src

  Exposed: True

Test-Suite codeworld-compiler-test
  Type:               exitcode-stdio-1.0
  Main-is:            Main.hs
  Hs-source-dirs:     test
  Build-depends:
    base,
    codeworld-compiler,
    directory,
    test-framework,
    test-framework-hunit,
    filepath,
    HUnit,
    containers == 0.5.*
