Name:                codeworld-error-sanitizer
Version:             0.1.0.0
Synopsis:            Error Sanitizer for CodeWorld Compiler  
License:             Apache-2.0
License-file:        LICENSE
Author:              Chris Smith
Maintainer:          cdsmith@gmail.com
Copyright:           (c) 2019, The CodeWorld Authors
Build-type:          Simple
Cabal-version:       >=1.10

Description:
  Regex based error filter library for CodeWorld compiler.

Library
  Hs-source-dirs:      src
  Exposed-modules:     ErrorSanitizer
  Other-modules:       RegexShim
  Build-depends:       base,
                       text

  if impl(ghcjs)
    Build-depends:     ghcjs-base,
                       ghcjs-prim
  else
    Build-depends:     array,
                       regex-base,
                       regex-tdfa,
                       regex-tdfa-text

  Exposed: True
