Name:                codeworld-game-api
Version:             0.2.0.0
Synopsis:            Network protocol for CodeWorld
License:             Apache
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Chris Smith <cdsmith@gmail.com>
Copyright:           (c) 2018, The CodeWorld Authors
Build-type:          Simple
Cabal-version:       >=1.8


Library
  Hs-source-dirs:      src
  Exposed-modules:     CodeWorld.Message
  Build-depends:       base < 5,
                       bytestring,
                       text

  Exposed:             True
  Ghc-options:         -O2
