name:                codeworld-game-server
version:             0.1
synopsis:            A simple and hopefully fast message broker
license:             Apache-2.0
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable codeworld-game-server
  main-is:             Main.hs
  other-modules:       CodeWorld.GameServer
  build-depends:       base >=4.8 && <4.10,
                       aeson,
                       text,
                       websockets == 0.9.*,
                       websockets-snap == 0.10.*,
                       snap-core == 1.0.*,
                       snap-server == 1.0.*,
                       transformers,
                       bytestring,
                       random,
                       unordered-containers,
                       time,
                       codeworld-game-api
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"

executable codeworld-game-stresstest
  main-is:             Stresstest.hs
  build-depends:       base >=4.8 && <4.10,
                       bytestring,
                       text,
                       websockets == 0.9.*,
                       codeworld-game-api,
                       async,
                       clock,
                       optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"

executable codeworld-game-bot
  main-is:             Bot.hs
  build-depends:       base >=4.8 && <4.10,
                       bytestring,
                       text,
                       websockets == 0.9.*,
                       codeworld-game-api,
                       codeworld-api,
                       async,
                       clock,
                       optparse-applicative,
                       regex-compat
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"
