Name:                codeworld-game-server
Version:             0.1
Synopsis:            A simple and hopefully fast message broker
License:             Apache-2.0
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Joachim Breitner <mail@joachim-breitner.de>
Copyright:           (c) 2018, The CodeWorld Authors
Build-type:          Simple
Extra-source-files:  ChangeLog.md
Cabal-version:       >=1.10

Executable codeworld-game-server
  Main-is:             Main.hs
  Other-modules:       CodeWorld.GameServer
  Build-depends:       base >=4.8 && <4.10,
                       aeson,
                       text,
                       websockets == 0.9.*,
                       websockets-snap == 0.10.*,
                       snap-core == 1.0.*,
                       snap-server == 1.0.*,
                       transformers,
                       bytestring,
                       random,
                       unordered-containers,
                       time,
                       codeworld-game-api
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"

Executable codeworld-game-stresstest
  Main-is:             Stresstest.hs
  Build-depends:       base >=4.8 && <4.10,
                       bytestring,
                       text,
                       websockets == 0.9.*,
                       codeworld-game-api,
                       async,
                       clock,
                       optparse-applicative
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"

Executable codeworld-game-bot
  Main-is:             Bot.hs
  Build-depends:       base >=4.8 && <4.10,
                       bytestring,
                       text,
                       websockets == 0.9.*,
                       codeworld-game-api,
                       codeworld-api,
                       async,
                       clock,
                       optparse-applicative,
                       regex-compat
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"
