name:                codeworld-prediction
version:             0.1
synopsis:            Functional lock-step simulation with client prediction
license:             Apache-2.0
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CodeWorld.Prediction
                       CodeWorld.Prediction.Trivial
  other-modules:       Data.MultiMap
                       CodeWorld.Prediction.Paper
  build-depends:       base >=4.8 && <4.10,
                       containers
  default-language:    Haskell2010

Test-Suite test-prediction
    Hs-source-dirs:    tests, src
    Main-is:           prediction.hs
    Type:              exitcode-stdio-1.0
    Other-modules:     CodeWorld.Prediction
                       Common
    Build-depends:     base,
                       containers,
                       QuickCheck
  default-language:    Haskell2010

Test-Suite test-prediction-paper
    Hs-source-dirs:    tests, src
    Main-is:           prediction-paper.hs
    Type:              exitcode-stdio-1.0
    Other-modules:     CodeWorld.Prediction.Paper
                       Common
    Build-depends:     base,
                       containers,
                       QuickCheck
  default-language:    Haskell2010
