Name:                funblocks-client
Version:             0.2.0.0
Synopsis:            Web client implementation for the CodeWorld blocks UI.

License:             Apache-2.0
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Stefan Jacholke <stefanjacholke@gmail.com>
Copyright:           (c) 2020, The CodeWorld Authors
Build-type:          Simple
Cabal-version:       >=1.10

Description:
  This is the implementation of the web client code for the CodeWorld
  blocks UI.  It wraps the Blockly library to implement code generation
  and UI interactions specific to CodeWorld.
  .
  This package is intended to be installed for GHCJS as part of the CodeWorld
  server.  It will not work with other Haskell implementations.

Executable funblocks-client
  Build-depends:       base 
  Hs-source-dirs:      src
  Main-is:             Main.hs
  Other-modules:       Blockly.Block
                     , Blockly.Connection
                     , Blockly.DesignBlock
                     , Blockly.Event
                     , Blockly.General
                     , Blockly.TypeExpr
                     , Blockly.Workspace
                     , Blocks.CodeGen
                     , Blocks.Parser
                     , Blocks.Printer
                     , Blocks.Types
  Default-language:    Haskell2010
  if impl(ghcjs -any)
    Build-depends:       ghcjs-base,
                         text,
                         containers,
                         ghcjs-dom,
                         mtl
  else
    Build-depends:       ghcjs-base-stub,
                         text,
                         containers,
                         ghcjs-dom,
                         mtl
