Name:                funblocks-server
Version:             0.1
Synopsis:            Web framework for Funblocks in CodeWorld
License-file:        LICENSE
Author:              The CodeWorld Authors
Maintainer:          Chris Smith <cdsmith@gmail.com>
Copyright:           (c) 2017, The CodeWorld Authors
Build-type:          Simple
Cabal-version:       >=1.2

Description:
  The web framework for the CodeWorld's funblock programming environment.

Library
  Exposed-modules: Funblocks
  Other-modules: Model, Util

  Build-depends:
    aeson,
    base,
    base64-bytestring,
    bytestring,
    cryptonite,
    data-default,
    directory,
    filepath,
    filesystem-trees,
    hindent >= 5 && < 5.2.3,
    http-conduit,
    memory,
    mtl,
    process,
    regex-compat,
    regex-tdfa,
    snap-core,
    snap-server,
    temporary,
    text,
    unix

  Hs-source-dirs: src
  Exposed: True

  Ghc-options: -threaded -Wall -funbox-strict-fields -O2
               -fno-warn-unused-do-bind
